--- a/Spring Cache/1.In-Memory Caching.md
+++ b/Spring Cache/1.In-Memory Caching.md
@@ -129,13 +129,178 @@ public Book updateBook(Book book) {
 
 ---
 
-### 📦 Example with Caffeine
+# 🧩 Using ConcurrentMapCache in Spring (In-Memory Cache)
 
-#### 📄 Maven Dependency
+`ConcurrentMapCache` is Spring's default in-memory cache implementation using a thread-safe `ConcurrentHashMap`. It is ideal for simple caching scenarios within a single JVM.
 
-```xml
-<dependency>
-  <groupId>com.github.ben-manes.caffeine</groupId>
-  <artifactId>caffeine</artifactId>
-</dependency>
+---
+
+## 1️⃣ Setup and Configuration
+
+By default, Spring Boot auto-configures `ConcurrentMapCache` when you enable caching with `@EnableCaching`.
+
+If you want to define it explicitly:
+
+```java
+@Configuration
+@EnableCaching
+public class CacheConfig {
+
+    @Bean
+    public CacheManager cacheManager() {
+        // Creates a ConcurrentMapCacheManager with caches named "books" and "authors"
+        return new ConcurrentMapCacheManager("books", "authors");
+    }
+}
+
 ```
+
+## 2️⃣ Basic Usage Examples with Caching Annotations
+
+### 📦 Example Service
+
+```java
+@Service
+public class BookService {
+
+    private void simulateSlowService() {
+        try {
+            Thread.sleep(2000L); // Simulate 2-second delay
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
+    }
+
+    @Cacheable("books")
+    public Book getBookByIsbn(String isbn) {
+        simulateSlowService(); // Expensive operation
+        return new Book(isbn, "Effective Java", "Joshua Bloch");
+    }
+
+    @CachePut(value = "books", key = "#book.isbn")
+    public Book updateBook(Book book) {
+        return book; // Imagine DB update here
+    }
+
+    @CacheEvict(value = "books", key = "#isbn")
+    public void deleteBookFromCache(String isbn) {
+        // Cache eviction for a single book
+    }
+
+    @CacheEvict(value = "books", allEntries = true)
+    public void clearCache() {
+        // Evicts all entries in 'books' cache
+    }
+}
+
+```
+
+## 3️⃣ What Happens Under the Hood?
+
+| Annotation    | Behavior                                                                                                                |
+| ------------- | ----------------------------------------------------------------------------------------------------------------------- |
+| `@Cacheable`  | Checks if the key exists in cache. If yes, returns cached value. If no, executes method, caches result, and returns it. |
+| `@CachePut`   | Always runs the method and puts its return value in the cache.                                                          |
+| `@CacheEvict` | Removes a specific entry or all entries from the cache.                                                                 |
+
+---
+
+## 4️⃣ Testing ConcurrentMapCache Behavior
+
+```java
+@SpringBootTest
+public class BookServiceTests {
+
+    @Autowired
+    BookService bookService;
+
+    @Test
+    public void testCacheable() {
+        long start = System.currentTimeMillis();
+        Book book1 = bookService.getBookByIsbn("123-456");
+        long timeFirstCall = System.currentTimeMillis() - start;
+
+        start = System.currentTimeMillis();
+        Book book2 = bookService.getBookByIsbn("123-456");
+        long timeSecondCall = System.currentTimeMillis() - start;
+
+        assertTrue(timeSecondCall < timeFirstCall); // Indicates cache hit
+        assertEquals(book1.getIsbn(), book2.getIsbn());
+    }
+
+    @Test
+    public void testCacheEvict() {
+        bookService.getBookByIsbn("999-999");  // Caches the book
+        bookService.deleteBookFromCache("999-999");  // Evicts it
+
+        long start = System.currentTimeMillis();
+        bookService.getBookByIsbn("999-999");  // Re-executes expensive method
+        long duration = System.currentTimeMillis() - start;
+
+        assertTrue(duration >= 2000L); // Confirms cache was evicted
+    }
+}
+```
+
+## 5️⃣ Advanced: Using Custom Cache Key
+
+### 🔹 Custom Key Expression
+
+Use SpEL (Spring Expression Language) to customize cache keys dynamically:
+
+```java
+@Cacheable(value = "books", key = "#isbn.toUpperCase()")
+public Book getBookByIsbn(String isbn) {
+    // This will cache the result with the key as the upper-case version of the ISBN
+    ...
+}
+```
+
+## 🔸 Custom Key Generator
+
+Define a reusable `KeyGenerator` bean when you need advanced key generation logic:
+
+```java
+@Bean("customKeyGenerator")
+public KeyGenerator keyGenerator() {
+    return (target, method, params) -> {
+        // Use lowercase version of first parameter as cache key
+        return params.length > 0 ? params[0].toString().toLowerCase() : "defaultKey";
+    };
+}
+```
+
+## 🔸 Apply the Custom Key Generator
+
+Use the custom key generator in your service method for precise control over cache keys:
+
+```java
+@Cacheable(value = "books", keyGenerator = "customKeyGenerator")
+public Book getBookByIsbn(String isbn) {
+    // Caches using lowercase version of ISBN as key
+    return new Book(isbn, "Effective Java", "Joshua Bloch");
+}
+```
+
+## 6️⃣ Limitations of ConcurrentMapCache
+
+| Limitation       | Explanation                                                                |
+| ---------------- | -------------------------------------------------------------------------- |
+| Unbounded Size   | No automatic eviction; memory usage can grow indefinitely                  |
+| No TTL           | Lacks time-to-live (TTL) or expiry support                                 |
+| Local Cache Only | Cache is limited to the current JVM instance; not shared across JVM nodes  |
+| Best Use Case    | Ideal for prototyping or simple, small-scale, single-instance applications |
+
+---
+
+## 📋 Summary
+
+| Feature        | Description                                     |
+| -------------- | ----------------------------------------------- |
+| Implementation | Uses `ConcurrentHashMap` internally             |
+| Thread-safe    | ✅ Yes                                          |
+| Cache Storage  | In JVM heap (RAM)                               |
+| TTL Support    | ❌ No built-in expiry mechanism                 |
+| Eviction       | Manual (via `@CacheEvict`)                      |
+| Shared Cache   | ❌ Not shared between JVM/application instances |
+| Usage          | Simple, fast, local in-memory caching           |
