--- a/Spring Cache/1.In-Memory Caching.md
+++ b/Spring Cache/1.In-Memory Caching.md
@@ -1,3 +1,27 @@
+# 🧠 In-Memory Caching in Spring
+
+**In-memory caching** stores frequently accessed data directly in the RAM of the application’s JVM. This helps eliminate expensive computations or slow I/O operations (like database or API calls) by serving data quickly from memory. It's ideal for improving performance in read-heavy, latency-sensitive applications where data consistency is not immediately critical.
+
+---
+
+## 📚 Table of Contents
+
+1. [ConcurrentMapCache (Spring Default)](#1️⃣-concurrentmapcache-spring-default)
+2. [Caffeine](#2️⃣-caffeine)
+3. [EhCache](#3️⃣-ehcache)
+
+## 1️⃣ ConcurrentMapCache (Spring Default)
+
+Spring Boot's default in-memory cache implementation backed by `ConcurrentHashMap`. Best suited for simple, single-instance applications.
+
+## 2️⃣ Caffeine
+
+A high-performance, near-optimal caching library for Java with support for features like TTL, eviction policies, and size-based eviction.
+
+## 3️⃣ EhCache
+
+A robust, flexible in-memory and persistent caching solution widely used for enterprise Java applications. Supports clustering and advanced configuration.
+
 ## 1. 🗂 In-Memory Caching in Spring Framework
 
 In-Memory Caching stores data directly in the application's memory (RAM). It offers the fastest access times, ideal for frequently accessed, non-volatile data in single-instance applications.
