--- a/Spring Cache/1.In-Memory Caching.md
+++ b/Spring Cache/1.In-Memory Caching.md
@@ -14,15 +14,7 @@
 
 Spring Boot's default in-memory cache implementation backed by `ConcurrentHashMap`. Best suited for simple, single-instance applications.
 
-## 2️⃣ Caffeine
-
-A high-performance, near-optimal caching library for Java with support for features like TTL, eviction policies, and size-based eviction.
-
-## 3️⃣ EhCache
-
-A robust, flexible in-memory and persistent caching solution widely used for enterprise Java applications. Supports clustering and advanced configuration.
-
-## 1. 🗂 In-Memory Caching in Spring Framework
+### 1. 🗂 In-Memory Caching in Spring Framework
 
 In-Memory Caching stores data directly in the application's memory (RAM). It offers the fastest access times, ideal for frequently accessed, non-volatile data in single-instance applications.
 
@@ -328,3 +320,11 @@ public Book getBookByIsbn(String isbn) {
 | Eviction       | Manual (via `@CacheEvict`)                      |
 | Shared Cache   | ❌ Not shared between JVM/application instances |
 | Usage          | Simple, fast, local in-memory caching           |
+
+## 2️⃣ Caffeine
+
+A high-performance, near-optimal caching library for Java with support for features like TTL, eviction policies, and size-based eviction.
+
+## 3️⃣ EhCache
+
+A robust, flexible in-memory and persistent caching solution widely used for enterprise Java applications. Supports clustering and advanced configuration.
