--- a/Spring Cache/1.In-Memory Caching.md
+++ b/Spring Cache/1.In-Memory Caching.md
@@ -307,6 +307,42 @@ public Book getBookByIsbn(String isbn) {
 | Local Cache Only | Cache is limited to the current JVM instance; not shared across JVM nodes  |
 | Best Use Case    | Ideal for prototyping or simple, small-scale, single-instance applications |
 
+## 📌 What Determines the Maximum Cache Size?
+
+With 8GB RAM allocated to the application, only a portion of that memory is usable by the JVM heap. The actual cache size depends on:
+
+| Factor             | Description                                                             |
+| ------------------ | ----------------------------------------------------------------------- |
+| JVM Heap Size      | Defined via `-Xmx` JVM option (e.g., `-Xmx6g` means 6GB max heap)       |
+| Other Memory Usage | Application logic, threads, GC metadata, etc., consume part of the heap |
+| Data Object Size   | Size of cached objects — bigger objects = fewer entries                 |
+| No Eviction        | Without size or TTL limits, risk of `OutOfMemoryError`                  |
+
+---
+
+## 📍 Example
+
+```bash
+java -Xms4g -Xmx6g -jar app.jar
+```
+
+- You gave the JVM a maximum of **6GB heap**.
+- Assume your app (without cache) uses approximately **2GB** on average.
+- ➡️ That leaves around **4GB** available for caching.
+- 📊 If each cached object is approximately **100KB**, you can store about: 4GB / 100KB = ~40,000 entries
+
+before memory pressure begins to build.
+
+---
+
+## 📛 Problem With Unbounded `ConcurrentMapCache`
+
+| 🛑 Risk            | ⚠️ Impact                                              |
+| ------------------ | ------------------------------------------------------ |
+| Memory leak        | Heap fills up, eventually causing `OutOfMemoryError`   |
+| No TTL             | Stale data may stay in memory indefinitely             |
+| No eviction policy | You cannot control memory growth or stale data cleanup |
+
 ---
 
 ## 📋 Summary
@@ -321,9 +357,229 @@ public Book getBookByIsbn(String isbn) {
 | Shared Cache   | ❌ Not shared between JVM/application instances |
 | Usage          | Simple, fast, local in-memory caching           |
 
+---
+
 ## 2️⃣ Caffeine
 
-A high-performance, near-optimal caching library for Java with support for features like TTL, eviction policies, and size-based eviction.
+## ⚡ Caffeine Cache in Spring Boot
+
+**Caffeine** is a high-performance, in-memory caching library for Java 8+.  
+It provides flexible, efficient caching strategies with support for **automatic eviction policies**, **TTL**, **size limits**, and more.  
+It is often used as an **advanced replacement** for Spring’s default `ConcurrentMapCache`.
+
+---
+
+### 🚀 Why Use Caffeine?
+
+| Feature         | ✅ Caffeine                  | ❌ ConcurrentMapCache (Default) |
+| --------------- | ---------------------------- | ------------------------------- |
+| Eviction Policy | ✅ Size-based, time-based    | ❌ None (grows indefinitely)    |
+| TTL Support     | ✅ Expire after write/access | ❌ Not supported                |
+| Performance     | 🚀 Highly optimized          | 🐢 Basic                        |
+| Memory-Aware    | ✅ Yes                       | ❌ No                           |
+| Stats Support   | ✅ Yes                       | ❌ No                           |
+
+---
+
+### 🧩 Key Features
+
+- ✅ Automatic eviction (by size or time)
+- ✅ Asynchronous loading
+- ✅ Expire after write / access
+- ✅ Refresh after write
+- ✅ Manual and automatic caching APIs
+- ✅ Thread-safe and non-blocking
+
+## ⚡ Full Example: Caffeine Cache with Spring Boot 3.2 and JDK 21
+
+This guide shows how to integrate and use **Caffeine** — a high-performance Java caching library — with **Spring Boot 3.2+** and **JDK 21**.
+
+---
+
+### 📦 1. Add Dependencies
+
+**`pom.xml`**
+
+```xml
+<dependencies>
+  <!-- Spring Boot Starter Cache -->
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-cache</artifactId>
+  </dependency>
+
+  <!-- Caffeine Cache Library -->
+  <dependency>
+    <groupId>com.github.ben-manes.caffeine</groupId>
+    <artifactId>caffeine</artifactId>
+  </dependency>
+</dependencies>
+```
+
+### ⚙️ 2. Configure Caching in `application.yml`
+
+```yaml
+spring:
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=10m
+```
+
+- **maximumSize=1000:** Caches up to 1,000 items
+- **expireAfterWrite=10m:** Each entry expires 10 minutes after creation
+
+### 🧠 3. Enable Caching
+
+```java
+@Configuration
+@EnableCaching
+public class CacheConfig {
+}
+```
+
+### 📚 4. Example Domain: Book
+
+```java
+public record Book(String isbn, String title, String author) {}
+
+```
+
+### 🛠 5. Service Layer: BookService
+
+```java
+@Service
+public class BookService {
+
+    @Cacheable("books")
+    public Book getBookByIsbn(String isbn) {
+        simulateSlowService();
+        return new Book(isbn, "Clean Code", "Robert C. Martin");
+    }
+
+    @CachePut(value = "books", key = "#book.isbn")
+    public Book updateBook(Book book) {
+        return book;
+    }
+
+    @CacheEvict(value = "books", key = "#isbn")
+    public void removeBookFromCache(String isbn) {
+        // Removes one entry
+    }
+
+    @CacheEvict(value = "books", allEntries = true)
+    public void clearCache() {
+        // Removes all entries
+    }
+
+    private void simulateSlowService() {
+        try {
+            Thread.sleep(2000L);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
+    }
+}
+
+```
+
+### 🧪 6. REST Controller
+
+```java
+@RestController
+@RequestMapping("/api/books")
+public class BookController {
+
+    private final BookService bookService;
+
+    public BookController(BookService bookService) {
+        this.bookService = bookService;
+    }
+
+    @GetMapping("/{isbn}")
+    public Book getBook(@PathVariable String isbn) {
+        return bookService.getBookByIsbn(isbn);
+    }
+
+    @PostMapping
+    public Book updateBook(@RequestBody Book book) {
+        return bookService.updateBook(book);
+    }
+
+    @DeleteMapping("/{isbn}")
+    public void evictBook(@PathVariable String isbn) {
+        bookService.removeBookFromCache(isbn);
+    }
+
+    @DeleteMapping
+    public void clearAll() {
+        bookService.clearCache();
+    }
+}
+
+```
+
+### ✅ 7. Test the Cache Behavior
+
+```bash
+curl http://localhost:8080/api/books/12345  # First call: slow
+curl http://localhost:8080/api/books/12345  # Second call: instant
+```
+
+### 🧰 Optional: Custom CacheManager (if you want programmatic config)
+
+```java
+@Bean
+public CacheManager cacheManager() {
+Caffeine<Object, Object> caffeineBuilder = Caffeine.newBuilder()
+.expireAfterWrite(10, TimeUnit.MINUTES)
+.maximumSize(1000);
+
+    CaffeineCacheManager cacheManager = new CaffeineCacheManager("books");
+    cacheManager.setCaffeine(caffeineBuilder);
+    return cacheManager;
+
+}
+```
+
+### 🔎 8. Monitor Caffeine Cache
+
+- Use Spring Boot Actuator:
+
+```xml
+<dependency>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
+```
+
+```yml
+management:
+  endpoints:
+    web:
+      exposure:
+        include: caches, health, metrics
+```
+
+Visit:
+
+```bash
+GET http://localhost:8080/actuator/caches
+GET http://localhost:8080/actuator/metrics/cache.gets
+```
+
+## 🧾 Summary
+
+| Feature               | Value                             |
+| --------------------- | --------------------------------- |
+| **Cache Type**        | Caffeine                          |
+| **TTL Support**       | ✅ Yes                            |
+| **Size Limit**        | ✅ Yes                            |
+| **Thread-safe**       | ✅ Yes                            |
+| **Application Type**  | Single-instance (not distributed) |
+| **Eviction Strategy** | LRU (default)                     |
+
+---
 
 ## 3️⃣ EhCache
 
