--- a/Spring Cache/1.In-Memory Caching.md
+++ b/Spring Cache/1.In-Memory Caching.md
@@ -583,4 +583,212 @@ GET http://localhost:8080/actuator/metrics/cache.gets
 
 ## 3️⃣ EhCache
 
-A robust, flexible in-memory and persistent caching solution widely used for enterprise Java applications. Supports clustering and advanced configuration.
+## 🧊 EhCache (Spring Boot Caching)
+
+**EhCache** is a robust, Java-based caching solution designed for both in-memory and disk-based caching. It's widely used in enterprise applications for its performance, flexibility, and support for advanced cache configurations.
+
+---
+
+### 🚀 Key Features
+
+| Feature                               | Supported             |
+| ------------------------------------- | --------------------- |
+| ✅ In-memory + disk overflow (hybrid) | Yes                   |
+| ✅ Time-based and size-based eviction | Yes                   |
+| ✅ Persistent cache option            | Yes                   |
+| ✅ Fine-grained configuration         | Yes (via XML or Java) |
+| ✅ JSR-107 (JCache) compliant         | Yes                   |
+| ✅ Seamless Spring Boot integration   | Yes                   |
+
+## 📌 When to Use EhCache
+
+| Scenario                              | Recommendation            |
+| ------------------------------------- | ------------------------- |
+| Need for disk overflow or persistence | ✅ Use EhCache            |
+| Pure in-memory, lightweight cache     | ❌ Prefer Caffeine        |
+| Multi-node/distributed caching        | ❌ Use Redis or Hazelcast |
+
+### 🧠 Spring Boot + EhCache 3 Full Example
+
+EhCache is a robust, widely-used in-process caching solution for Java. It supports advanced caching features like TTL, size limits, persistence, and tiered caching (heap, off-heap, disk).
+
+### 📦 What You'll Learn
+
+- ✅ How to integrate **EhCache 3** with **Spring Boot 3.2**
+- ⚙️ Configure **cache size** and **TTL (Time-To-Live)**
+- 🧩 Use caching annotations:
+  - `@Cacheable`
+  - `@CachePut`
+  - `@CacheEvict`
+- 👀 View and control **cache behavior** effectively
+
+### 🛠 Project Structure
+
+```css
+ehcache-demo/
+├── src/
+│   ├── main/
+│   │   ├── java/com/example/ehcachedemo/
+│   │   │   ├── EhcacheDemoApplication.java
+│   │   │   ├── config/EhCacheConfig.java
+│   │   │   ├── service/BookService.java
+│   │   │   └── model/Book.java
+│   │   └── resources/
+│   │       ├── ehcache.xml
+│   │       └── application.yml
+```
+
+## 🧩 1. Add Dependencies
+
+**`pom.xml`**
+
+```xml
+<dependencies>
+  <!-- Spring Boot Starter Cache -->
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-cache</artifactId>
+  </dependency>
+
+  <!-- EhCache 3 -->
+  <dependency>
+    <groupId>org.ehcache</groupId>
+    <artifactId>ehcache</artifactId>
+  </dependency>
+</dependencies>
+```
+
+## ⚙️ 2. application.yml
+
+```yaml
+spring:
+  cache:
+    type: ehcache
+    ehcache:
+      config: classpath:ehcache.xml
+```
+
+### 📁 3. ehcache.xml (src/main/resources/ehcache.xml)
+
+```xml
+<config
+    xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'
+    xmlns='http://www.ehcache.org/v3'
+    xsi:schemaLocation="http://www.ehcache.org/v3 http://www.ehcache.org/schema/ehcache-core.xsd">
+
+  <cache alias="books">
+    <expiry>
+      <ttl unit="minutes">5</ttl>
+    </expiry>
+    <heap unit="entries">1000</heap>
+    <resources>
+      <offheap unit="MB">50</offheap>
+    </resources>
+  </cache>
+</config>
+```
+
+### 🔧 4. EhCacheConfig.java
+
+```java
+@Configuration
+@EnableCaching
+public class EhCacheConfig {
+// Spring Boot auto-configures CacheManager via application.yml & ehcache.xml
+}
+```
+
+### 📚 5. Model Class: Book.java
+
+```java
+public class Book {
+private String isbn;
+private String title;
+private String author;
+
+    public Book() {}
+
+    public Book(String isbn, String title, String author) {
+        this.isbn = isbn;
+        this.title = title;
+        this.author = author;
+    }
+
+    // Getters and setters
+
+}
+```
+
+### 🔄 6. Service with Caching: BookService.java
+
+```java
+@Service
+public class BookService {
+
+    @Cacheable("books")
+    public Book getBookByIsbn(String isbn) {
+        simulateSlowService();
+        return new Book(isbn, "Effective Java", "Joshua Bloch");
+    }
+
+    @CachePut(value = "books", key = "#book.isbn")
+    public Book updateBook(Book book) {
+        return book;
+    }
+
+    @CacheEvict(value = "books", key = "#isbn")
+    public void deleteBookFromCache(String isbn) {}
+
+    @CacheEvict(value = "books", allEntries = true)
+    public void clearCache() {}
+
+    private void simulateSlowService() {
+        try {
+            Thread.sleep(2000);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+        }
+    }
+
+}
+```
+
+🚀 7. Main Class: EhcacheDemoApplication.java
+
+```java
+@SpringBootApplication
+public class EhcacheDemoApplication {
+public static void main(String[] args) {
+SpringApplication.run(EhcacheDemoApplication.class, args);
+}
+}
+```
+
+🧪 8. Test the Cache
+
+Call `getBookByIsbn("123")`:
+
+- ✅ **1st call:** Slow (~2 seconds)
+- ✅ **2nd call:** Fast (served from cache)
+- ⏳ **After 5 mins:** Cache expires → Slow again (recomputed)
+
+---
+
+✅ Summary
+
+| Feature             | Supported             |
+| ------------------- | --------------------- |
+| TTL / Expiry        | ✅ (via XML config)   |
+| Size Limit          | ✅                    |
+| Disk Offloading     | ✅ (offheap)          |
+| Spring Integration  | ✅ Native             |
+| Thread Safety       | ✅                    |
+| Persistent Caching  | ✅ (optional)         |
+| Distributed Support | ❌ (single-node only) |
+
+---
+
+📚 References
+
+- [Ehcache Documentation](https://www.ehcache.org/documentation/)
+- [Spring Cache Abstraction](https://docs.spring.io/spring-framework/docs/current/reference/html/integration.html#cache)
