--- a/Spring Cache/1.In-Memory Caching.md
+++ b/Spring Cache/1.In-Memory Caching.md
@@ -792,3 +792,31 @@ Call `getBookByIsbn("123")`:
 
 - [Ehcache Documentation](https://www.ehcache.org/documentation/)
 - [Spring Cache Abstraction](https://docs.spring.io/spring-framework/docs/current/reference/html/integration.html#cache)
+
+📊 Cache Provider Comparison: Spring Boot
+
+| Feature / Capability           | ConcurrentMapCache (Default) | Caffeine                               | EhCache                                  |
+| ------------------------------ | ---------------------------- | -------------------------------------- | ---------------------------------------- |
+| **Type**                       | In-memory                    | In-memory                              | In-memory / Off-heap / Disk              |
+| **Eviction Policy**            | ❌ None (grows indefinitely) | ✅ Size- and time-based                | ✅ Size- and time-based                  |
+| **TTL / Expiry Support**       | ❌ Not supported             | ✅ expireAfterWrite, expireAfterAccess | ✅ XML or programmatic configuration     |
+| **Maximum Size Control**       | ❌ No                        | ✅ maximumSize or maximumWeight        | ✅ heap, offheap, disk                   |
+| **Thread Safety**              | ✅ Yes                       | ✅ Highly concurrent                   | ✅ Yes                                   |
+| **Asynchronous Loading**       | ❌ No                        | ✅ Supported                           | ✅ Supported (via loading caches)        |
+| **Stats / Metrics**            | ❌ No                        | ✅ Micrometer / built-in               | ✅ Micrometer / JMX                      |
+| **Persistence (Disk Storage)** | ❌ No                        | ❌ No                                  | ✅ Optional                              |
+| **Serialization Required**     | ❌ No                        | ❌ No                                  | ✅ For disk storage                      |
+| **Spring Boot Integration**    | ✅ Built-in                  | ✅ Native via Spring Boot              | ✅ Native via Spring Boot                |
+| **Best For**                   | Simple prototyping           | High-performance in-memory caching     | Configurable, multi-tier caching         |
+| **Distributed Support**        | ❌ No                        | ❌ No                                  | ❌ (requires extensions like Terracotta) |
+| **Usage Risk**                 | ❗ Memory leaks if unbounded | ✅ Safe with limits                    | ✅ Safe with TTL and tiers               |
+| **Configuration Complexity**   | 🟢 Very simple               | 🟡 Moderate                            | 🔴 More verbose (XML / Java config)      |
+
+✅ **Recommendation Summary**
+
+| Use Case                                | Recommended Cache                   |
+| --------------------------------------- | ----------------------------------- |
+| Quick & simple local caching            | `ConcurrentMapCache`                |
+| Fast, bounded in-memory caching         | `Caffeine`                          |
+| Advanced caching (TTL + Disk + Offheap) | `EhCache`                           |
+| Need distributed caching                | ❌ Use `Redis` / `Coherence` / etc. |
